--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <section id="about">
         <h2>About Us</h2>
-        <p>Why Do British People Exist.</p>
+        <p>Who is the chicken and why did he cross the road?</p>
     </section>
     
     <section id="services">
